fix: page widths and gaps

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,19 @@
     background: #0284b820 url("../../public/background.svg") repeat center;
 }
 
+.client-page {
+    padding: calc(var(--spacing) * 4) /* 1rem = 16px */;
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--spacing) * 4) /* 1rem = 16px */;
+    width: 100%;
+    max-width: 1380px;
+    margin-inline: auto;
+    @media (width >= 64rem /* 1024px */) {
+        gap: calc(var(--spacing) * 8) /* 2rem = 32px */;
+    }
+}
+
 @keyframes rotate {
     from {
         transform: rotate(0deg);
